# ALEX

./: CMakeLists.txt  ITconfigWorkload.py  ITconfigWorkloads.py  configWorkloads.py  createDB.py  runWorkload.sh
src/benchmark/: flags.h  main.cpp
src/core/: alex.h  lipp.h
src/lipp/: benchmark.cpp  flags.h
src/pgm/: benchmark.cpp  benchmark_old.cpp  main.cpp
